<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ItemsList">

    <Button
        android:id="@+id/btnCheese"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cheeseButtonText"
        android:onClick="addCheese"/>

    <Button
        android:id="@+id/btnRice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/riceButtonText"
        android:onClick="addRice"/>

    <Button
        android:id="@+id/btnCorn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cornButtonText"
        android:onClick="addCorn"/>

    <Button
        android:id="@+id/btnFlour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/flourButtonText"
        android:onClick="addFlour"/>
</LinearLayout>